--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Shiyao Li</title>
+		<link rel="icon" href="./images/snail.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +29,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Home</a></li>
+							<li><a href="#intro" class="active">About</a></li>
 							<li><a href="#first">Projects</a></li>
 							<li><a href="#second">Publications</a></li>
 							<li><a href="#cta">CV</a></li>
@@ -43,11 +44,15 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Shiyao Li</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I'm a visualization researcher exploring how design choices of visualization shape visualization interpretations through the lens of <u>confirmation bias</u>. My work combines quantitative and qualitative methods to explore how individuals reason with visual data.<br>Specifically, I look into three questions:</p>
+										<ul>
+											<li>How to elicit attitudes and beliefs more accurately and expressively?</li>
+											<li>How to identify confirmation bias in both static and interactive visualization?</li>
+											<li>Which types of interventions could we employ to mitigate biases?</li>
+										  </ul>
+										  
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
