--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Shiyao Li</title>
+		<title>Shiyao Li (Website currently under construction)</title>
 		<link rel="icon" href="./images/alvin.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
