--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Shiyao Li (Website currently under construction)</title>
+		<title>Shiyao Li</title>
 		<link rel="icon" href="./images/alvin.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -44,7 +44,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Shiyao Li</h2>
+											<h2>Shiyao Li(Website currently under construction)</h2>
 										</header>
 										<p>I'm a visualization researcher exploring how design choices of visualization shape visualization interpretations through the lens of <u>confirmation bias</u>. My work combines quantitative and qualitative methods to explore how individuals reason with visual data.<br>Specifically, I look into three questions:</p>
 										<ul>
