more formatting, link to great ppl

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Shiyao Li(Website currently under construction)</h2>
+											<h2>Shiyao Li</h2>
 										</header>
-										<p>I'm a visualization researcher exploring how design choices of visualization shape visualization interpretations through the lens of <u>confirmation bias</u>. My work combines quantitative and qualitative methods to explore how individuals reason with visual data.<br>Specifically, I look into three questions:</p>
+										<p>I'm a 4th-year Ph.D. student in Computer Science and Informatics at Emory, fortunate to be advised by <a href="https://emilywall.github.io/" target="_blank">Dr. Emily Wall</a> and to work closely with <a href="https://cyxiong.com/" target="_blank">Dr. Cindy Xiong Bearfield</a>.
+											<br><br>I'm a visualization researcher exploring how design choices of visualization shape visualization interpretations through the lens of <u>confirmation bias</u>. My work combines quantitative and qualitative methods to explore how individuals reason with visual data.<br><br>Specifically, I look into three questions:</p>
 										<ul>
 											<li>How to elicit attitudes and beliefs more accurately and expressively?</li>
 											<li>How to identify confirmation bias in both static and interactive visualization?</li>
