--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 											<h2>Shiyao Li</h2>
 										</header>
 										<p>I'm a 4th-year Ph.D. student in Computer Science and Informatics at Emory, fortunate to be advised by <a href="https://emilywall.github.io/" target="_blank">Dr. Emily Wall</a> and to work closely with <a href="https://cyxiong.com/" target="_blank">Dr. Cindy Xiong Bearfield</a>.
-											<br><br>I'm a visualization researcher exploring how design choices of visualization shape visualization interpretations through the lens of <u>confirmation bias</u>. My work combines quantitative and qualitative methods to explore how individuals reason with visual data.<br><br>Specifically, I look into three questions:</p>
+											<br><br>I'm a visualization researcher exploring how human/visualization design factors shape visualization interpretations through the lens of <u>confirmation bias</u>. My works combine both quantitative and qualitative methods to understand how individuals reason with visual data.<br><br>Specifically, I look into three questions:</p>
 										<ul>
 											<li>How to elicit attitudes and beliefs more accurately and expressively?</li>
 											<li>How to identify confirmation bias in both static and interactive visualization?</li>
 											<li>Which types of interventions could we employ to mitigate biases?</li>
-										  </ul>
+										  </ul></p>
 										  
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
