added more links

--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
 								<div style="display: flex; align-items: flex-start; gap: 20px;">
 									<div style="display: flex; align-items: flex-start; gap: 20px; margin-left: 3em;">
 										<figure class="image-lg" style="flex-shrink: 0; text-align: center;">
-											<a href="https://example.com/page1" target="_blank">
+											<a href="https://dataxdesign.io/chapters/description#visualizing-resistance" target="_blank">
 												<img src="images/bg.png" alt="Design 1" style="height: 100%; max-width: 800px; height: 300px;"/>
 											</a>
 											<figcaption style="margin-top: 0.5em;">Visualizing Resistance in Slave Trade Voyages</figcaption>
 										</figure>
 										
 										<figure class="image-lg" style="flex-shrink: 0; margin-left: 3em; text-align: center;">
-											<a href="https://example.com/page2" target="_blank">
+											<a href="https://dataxdesign.io/chapters/labor" target="_blank">
 												<img src="images/labor.png" alt="Design 2" style="height: 100%; max-width: 800px; height: 300px;"/>
 											</a>
 											<figcaption style="margin-top: 0.5em;">Visualizing Hidden Labor Behind the Creation of the Website.</figcaption>
