--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 											<a href="https://dataxdesign.io/chapters/description#visualizing-resistance" target="_blank">
 												<img src="images/bg.png" alt="Design 1" style="height: 100%; max-width: 800px; height: 300px;"/>
 											</a>
-											<figcaption style="margin-top: 0.5em;">Visualizing Resistance in Slave Trade Voyages</figcaption>
+											<figcaption style="margin-top: 0.5em;">Visualizing Resistance in Slave Trade Voyages<br><span style="font-size: 0.8em;"><a href="conceptual_map/index.html" target="_blank">An earlier implementation.</a></span></figcaption>
 										</figure>
 										
 										<figure class="image-lg" style="flex-shrink: 0; margin-left: 3em; text-align: center;">
