--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Shiyao Li</h2>
+											<h2>Shiyao Li (李诗尧)</h2>
 										</header>
 										<p>I'm a 4th-year Ph.D. student in Computer Science and Informatics at Emory, fortunate to be advised by <a href="https://emilywall.github.io/" target="_blank">Dr. Emily Wall</a> and to work closely with <a href="https://cyxiong.com/" target="_blank">Dr. Cindy Xiong Bearfield</a>.
 											<br><br>I'm a visualization researcher exploring how human/visualization design factors shape visualization interpretations through the lens of <u>confirmation bias</u>. My works combine both quantitative and qualitative methods to understand how individuals reason with visual data.<br><br>Specifically, I look into three questions:</p>
