--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">"Success is not final, failure is not fatal: it is the courage to continue that counts." ― a (possible) made-up quote but I like it :) </p>
+						<p class="copyright">"Success is not final, failure is not fatal: it is the courage to continue that counts." ― a (possibly) made-up quote but I like it :) </p>
 					</footer>
 
 			</div>
