update some papers

--- a/index.html
+++ b/index.html
@@ -164,17 +164,23 @@
 							<header class="major">
 								<h2>Publications</h2>
 							</header>
+							<p style="margin-bottom: 10px;"></p>
+								<b>Confirmation Bias: The Double-Edged Sword of Data Facts in Visual Data Communication</b><br>
+						<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
+								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), 2025. 
+								<a href="papers/bias.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
+							</p>
 							
 							<p style="margin-bottom: 10px;">
-								<b>Adapting Educational Technologies across Learner Populations: A Usability Study with Adolescents on the Autism Spectrum.</b><br>
-								Zi, Xiaoman, <strong>Li, Shiyao</strong>, Roxanne Rashedi, Marian Rushdy, Ben Lane, Shitanshu Mishra, Gautam Biswas et al. <br> 
+								<b>Adapting Educational Technologies across Learner Populations: A Usability Study with Adolescents on the Autism Spectrum</b><br>
+								Xiaoman Zi, <strong>Shiyao Li</strong>, Roxanne Rashedi, Marian Rushdy, Ben Lane, Shitanshu Mishra, Gautam Biswas et al. <br> 
 								<i>42nd Annual Meeting of the Cognitive Science Society</i>, 2020. 
 								<a href="papers/0435.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
 						
 							<p style="margin-bottom: 10px;">
 								<strong>Characterizing datasets for social visual question answering, and the new TinySocial dataset</strong><br>
-								Chen, Zhanwen, Shiyao Li, Roxanne Rashedi, Xiaoman Zi, Morgan Elrod-Erickson, Bryan Hollis, Angela Maliakal, Xinyu Shen, Simeng Zhao, and Maithilee Kunda. <br> 
+								Zhanwen Chen, <strong>Shiyao Li</strong>, Roxanne Rashedi, Xiaoman Zi, Morgan Elrod-Erickson, Bryan Hollis, Angela Maliakal, Xinyu Shen, Simeng Zhao, and Maithilee Kunda. <br> 
 								<i>Joint IEEE 10th International Conference on Development and Learning and Epigenetic Robotics (ICDL-EpiRob)</i>, 2020.
 								<a href="papers/2010.11997v1.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
