paper format updates

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 							<header class="major">
 								<h2>Publications</h2>
 							</header>
-							<p style="margin-bottom: 10px;"></p>
+							<p style="margin-bottom: 10px;">
 								<b>Confirmation Bias: The Double-Edged Sword of Data Facts in Visual Data Communication</b><br>
-						<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
-								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), 2025. 
+								<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
+								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), 2025.</i> 
 								<a href="papers/bias.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
 							
