add paper to project

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 									<br>
 									<!-- <a href="file/papers/LORBiasVIS4GOOD23.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
 									<a href="https://github.com/CAV-Lab/Bias-in-LOR"> <i class="fa fa-regular fa-folder"></i> Supplemental</a> -->
+									<a href="file/papers/chi25-744.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
 								</div>
 								
 								<span class="image-lg" style="flex-shrink: 0;">
