--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
 										and alignment of data facts with pre-existing beliefs significantly impact confirmation bias. Data facts that support prior beliefs can
 										exacerbate confirmation bias, whereas those that refute those beliefs can mitigate it. This effect is amplified when the data facts are
 										used in combination with visual annotations. Data facts describing variable correlations are perceived to be more compelling than
-										ones describing average values and are associated with higher levels of confirmation bias. <i>Current work is under review.</i>
+										ones describing average values and are associated with higher levels of confirmation bias.<br>
+										<a href="file/papers/chi25-744.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
 									</p>
 									<br>
 									<!-- <a href="file/papers/LORBiasVIS4GOOD23.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
 									<a href="https://github.com/CAV-Lab/Bias-in-LOR"> <i class="fa fa-regular fa-folder"></i> Supplemental</a> -->
-									<a href="file/papers/chi25-744.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
+						
 								</div>
 								
 								<span class="image-lg" style="flex-shrink: 0;">
