--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							<p style="margin-bottom: 10px;">
 								<b>Confirmation Bias: The Double-Edged Sword of Data Facts in Visual Data Communication</b><br>
 								<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
-								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), 2025.</i> 
+								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), .</i> 2025
 								<a href="papers/chi25-744.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
 							
