add papers and updated CV

--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
 								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), </i> 2025
 								<a href="papers/chi25-744.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
+
+							<p style="margin-bottom: 10px;"></p>
+								<b>What Data Does and Does Not Represent: Visualizing the Archive of Slavery</b><br>
+								<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
+								<i>IEEE Computer Graphics and Applications, </i> 2025
+								<a href="papers/VisualizeResistance_final_withImageCredit.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
+							</p>
 							
 							<p style="margin-bottom: 10px;">
 								<b>Adapting Educational Technologies across Learner Populations: A Usability Study with Adolescents on the Autism Spectrum</b><br>
