--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 							<p style="margin-bottom: 10px;"></p>
 								<b>What Data Does and Does Not Represent: Visualizing the Archive of Slavery</b><br>
-								<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
+								<strong>Shiyao Li</strong>, Margy Adams, Tanvi Sharma, Jay Varner, Lauren Klein <br> 
 								<i>IEEE Computer Graphics and Applications, </i> 2025
 								<a href="papers/VisualizeResistance_final_withImageCredit.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
