--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<a href="papers/chi25-744.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
 
-							<p style="margin-bottom: 10px;"></p>
+							<p style="margin-bottom: 10px;">
 								<b>What Data Does and Does Not Represent: Visualizing the Archive of Slavery</b><br>
 								<strong>Shiyao Li</strong>, Margy Adams, Tanvi Sharma, Jay Varner, Lauren Klein <br> 
 								<i>IEEE Computer Graphics and Applications, </i> 2025
