--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										<header class="major">
 											<h2>Shiyao Li (李诗尧)</h2>
 										</header>
-										<p>I'm a 4th-year Ph.D. student in Computer Science and Informatics at Emory, fortunate to be advised by <a href="https://emilywall.github.io/" target="_blank">Dr. Emily Wall</a> and to work closely with <a href="https://cyxiong.com/" target="_blank">Dr. Cindy Xiong Bearfield</a>.
+										<p>I'm a 5th-year Ph.D. student in Computer Science and Informatics at Emory, fortunate to be advised by <a href="https://emilywall.github.io/" target="_blank">Dr. Emily Wall</a> and to work closely with <a href="https://cyxiong.com/" target="_blank">Dr. Cindy Xiong Bearfield</a>.
 											<br><br>I'm a visualization researcher exploring how human/visualization design factors shape visualization interpretations through the lens of <u>confirmation bias</u>. My works combine both quantitative and qualitative methods to understand how individuals reason with visual data.<br><br>Specifically, I look into three questions:</p>
 										<ul>
 											<li>How to elicit attitudes and beliefs more accurately and expressively?</li>
@@ -108,10 +108,9 @@
 										identified five key elements in the sketches: emotions, directional
 										attitudes, structural beliefs, uncertainty, and topics, and analyzed
 										how these elements interact, using the textual elicitations to
-										disambiguate sketches. <i>Current draft is under revision.</i></p>
+										disambiguate sketches. </p>
 									<br>
-									<!-- <a href="file/papers/LORBiasVIS4GOOD23.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
-									<a href="https://github.com/CAV-Lab/Bias-in-LOR"> <i class="fa fa-regular fa-folder"></i> Supplemental</a> -->
+									<a href="papers/chi26-1028.pdf">  <i class="fa fa-regular fa-copy"></i> Paper</a> &nbsp &nbsp &nbsp
 								</div>
 								
 								<span class="image-lg" style="flex-shrink: 0;">
