--- a/index.html
+++ b/index.html
@@ -162,8 +162,14 @@
 								<h2>Publications</h2>
 							</header>
 							<p style="margin-bottom: 10px;">
+								<b>Does a Picture Paint a Thousand Words? Using Visual and Textual Channels to Understand Attitudes and Beliefs</b><br>
+								<strong>Shiyao Li</strong>, Roshini Deva, Arpit Narechania, Alireza Karduni, Cindy Xiong Bearfield, Emily Wall <br> 
+								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), </i> 2026
+								<a href="papers/chi26-1028.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
+							</p>
+							<p style="margin-bottom: 10px;">
 								<b>Confirmation Bias: The Double-Edged Sword of Data Facts in Visual Data Communication</b><br>
-								<strong>Shiyao Li</strong>, Thomas Davidson, Emily Wall, Cindy Xiong Bearfield <br> 
+								<strong>Shiyao Li</strong>, Thomas Davidson, Cindy Xiong Bearfield, Emily Wall <br> 
 								<i>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI), </i> 2025
 								<a href="papers/chi25-744.pdf" target="_blank"><i class="fa fa-file" aria-hidden="true"></i> PDF</a> 
 							</p>
