--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li><a href="#first">Projects</a></li>
 							<li><a href="#dxd">Visualization Designs</a></li>
 							<li><a href="#publications">Publications</a></li>
-							<li><a href="cv/shiyaoli_CV.pdf" target="_blank">CV</a></li>
+							<li><a href="cv/shiyao_li_CV.pdf" target="_blank">CV</a></li>
 						</ul>
 					</nav>
 
